создан блок интро

--- a/css/style.less
+++ b/css/style.less
@@ -9,8 +9,10 @@ html {
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    -webkit-font-smoothing: antialiased;
     font-size: 1rem;
     color: @black;
+    background-color: @light_blue;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -24,3 +26,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 // Blocks
+@import "blocks/container.less";
+@import "blocks/header.less";
+@import "blocks/nav.less";
+@import "blocks/intro.less";
+@import "blocks/btn.less";
