--- a/css/vars.less
+++ b/css/vars.less
@@ -1,6 +1,8 @@
 // main: style.less
 
-@black: #2B2A2C;
-@gray: #6A696B;
-@gray-light: #8D8D8E;
-@white: #ffffff;
+@white: #FFFFFF;
+@blue: #413B7E;
+@light_blue: #EEF6F9;
+@black: #000000;
+@light_black: #202020;
+@red: #9E365B;
