--- a/css/blocks/btn.less
+++ b/css/blocks/btn.less
@@ -13,7 +13,7 @@
     text-decoration: none;
     text-align: center;
 
-    transition: background-color .2s linear, color .2s linear;
+    transition: background-color .1s linear, color .1s linear;
 
     &:focus {
         outline: none;
@@ -27,6 +27,10 @@
         background-color: fade(@white, 30);
         -webkit-backdrop-filter: blur(1rem);
         backdrop-filter: blur(1rem);
+
+        &:hover {
+            background-color: @white;
+        }
     }
 
     &--partn {
