--- a/css/style.less
+++ b/css/style.less
@@ -13,6 +13,7 @@ body {
     font-size: 1rem;
     color: @black;
     background-color: @light_blue;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -30,4 +31,9 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/header.less";
 @import "blocks/nav.less";
 @import "blocks/intro.less";
-@import "blocks/btn.less";
+@import "blocks/about.less";
+@import "blocks/slider.less";
+
+// Helpers
+@import "btns.less";
+@import "title.less";
