--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -2,8 +2,10 @@
 
 .container {
     width: 100%;
-    max-width: 1250px;
-    padding: 0;
+    max-width: 1310px;
+    height: auto;
+    padding: 0 2rem;
     margin: 0 auto;
+    text-align: center;
     position: relative;
 }
