шаблон блока партнёров

--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -25,16 +25,10 @@
 }
 
 .slider {
-    margin: 0 0 50px;
 	position: relative;
-	padding: 0px 60px;
 
     .slick-list {
         overflow: hidden;
-        border-radius: 20px;
-        -webkit-border-radius: 20px;
-        -moz-border-radius: 20px;
-        -khtml-border-radius: 20px;
     }
 }
 
@@ -50,12 +44,12 @@
     opacity: .5;
 
     &.slick-prev{
-        left: 0;
+        left: -4rem;
         background: url('../images/svg/arrow-left.svg') 0 0 / 100% no-repeat;
     }
 
     &.slick-next{
-        right: 0;
+        right: -4rem;
         background: url('../images/svg/arrow-right.svg') 0 0 / 100% no-repeat;
     }
 }
