--- a/css/title.less
+++ b/css/title.less
@@ -1,6 +1,7 @@
 // main: style.less
 
 .title {
+    font-family: 'Montserrat Alternates', sans-serif;
     display: flex;
     justify-content: center;
     position: relative;
