--- a/css/btns.less
+++ b/css/btns.less
@@ -23,6 +23,7 @@
     &--intro {
         min-width: 350px;
         padding: .8rem .3rem;
+
         font-size: 1.6rem;
         background-color: fade(@white, 30);
         -webkit-backdrop-filter: blur(1rem);
@@ -35,8 +36,15 @@
 
     &--partn {
         min-width: 200px;
-        padding: 1.5rem .5rem;
+        padding: 1rem .5rem;
+        margin-bottom: 1.6rem;
+        
+        align-self: baseline;
+
         font-size: 1rem;
         background-color: @red;
+
+        color: @white;
+        font-size: 1rem;
     }
 }
