--- a/css/style.less
+++ b/css/style.less
@@ -16,7 +16,7 @@ body {
     overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
@@ -33,6 +33,8 @@ h1, h2, h3, h4, h5, h6 {
 @import "blocks/intro.less";
 @import "blocks/about.less";
 @import "blocks/slider.less";
+@import "blocks/news.less";
+@import "blocks/partners.less";
 
 // Helpers
 @import "btns.less";
