--- a/css/style.less
+++ b/css/style.less
@@ -31,10 +31,12 @@ h1, h2, h3, h4, h5, h6, p {
 @import "blocks/header.less";
 @import "blocks/nav.less";
 @import "blocks/intro.less";
+@import "blocks/overflow.less";
 @import "blocks/about.less";
 @import "blocks/slider.less";
 @import "blocks/news.less";
 @import "blocks/partners.less";
+@import "blocks/footer.less";
 
 // Helpers
 @import "btns.less";
