--- a/css/blocks/partners.less
+++ b/css/blocks/partners.less
@@ -3,16 +3,15 @@
 .partners__inner {
     display: flex;
     flex-direction: column;
+    margin-bottom: 3rem;
 }
 
 .partners__img {
     width: 100%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
     max-width: 15%;
     min-height: 200px;
-    background-color: @red;
-    border-radius: 1.3rem;
 
     margin-right: 1.1rem;
     margin-bottom: 0.6rem;
