--- a/css/btns.less
+++ b/css/btns.less
@@ -15,6 +15,8 @@
 
     transition: background-color .1s linear, color .1s linear;
 
+    box-shadow: 0 .3rem 1rem 1px fade(@black, 50);
+
     &:focus {
         outline: none;
     }
@@ -46,5 +48,11 @@
 
         color: @white;
         font-size: 1rem;
+
+        transition: .1s linear;
+
+        &:hover {
+            background-color: fade(@red, 70);
+        }
     }
 }
