--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -14,6 +14,17 @@
     box-shadow: inset 0 0 0 1000px fade(@light_black, 80);
 }
 
+.intro__inner {
+    opacity: 0;
+    transform: translateY(10%);
+
+    &.show {
+        opacity: 1;
+        transform: translateY(0%);
+        transition: all 1s ease .2s;
+    }
+}
+
 .intro__text {
     position: relative;
     margin: 0 auto;
