--- a/css/blocks/partners.less
+++ b/css/blocks/partners.less
@@ -1,5 +1,16 @@
 // main: ../style.less
 
+.partners {
+    opacity: 0;
+    transform: translateY(10%);
+    transition: all 1s ease;
+
+    &.show {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
 .partners__inner {
     display: flex;
     flex-direction: column;
