--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -21,12 +21,45 @@
     display: flex;
 }
 
+.about__item {
+    min-width: 620px;
+    position: relative;
+
+    &:hover .about__content {
+        opacity: 1;
+    }
+}
+
+.about__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 1rem;
+
+    background-color: fade(@blue, 80);
+    color: @light_blue;
+    opacity: 0;
+    text-align: center;
+    font-size: 1.2rem;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    transition: opacity .2s linear;
+}
+
+.about__title {
+    font-weight: 700;
+}
+
 .about__img {
     width: 100%;
-    max-width: 620px;
-    height: auto;
-    position: relative;
-    z-index: 2;
+    height: 100%;
+    z-index: 1;
 }
 
 .about__text {
