--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -14,8 +14,6 @@
     }
 }
 
-// .slider__block
-
 .slick-slider{
 	min-width: 0;
 }
@@ -37,7 +35,7 @@
 .slick-arrow{
 	position: absolute;
 	top: 45%;
-	margin: -30px 30px 0px;
+	margin: -2rem 2rem 0px;
 	z-index: 10;
 	font-size: 0;
 	width: 20px;
@@ -63,7 +61,7 @@
 
     li{
         list-style: none;
-        margin: 0px 10px;
+        margin: 0px .6rem;
 
         &.slick-active button{
             background-color: transparent;
