--- a/css/btns.less
+++ b/css/btns.less
@@ -27,6 +27,7 @@
         padding: .8rem .3rem;
 
         font-size: 1.6rem;
+        color: @black;
         background-color: fade(@white, 30);
         -webkit-backdrop-filter: blur(1rem);
         backdrop-filter: blur(1rem);
