--- a/css/title.less
+++ b/css/title.less
@@ -8,7 +8,7 @@
     font-size: 2.7rem;
     font-weight: 700;
     color: @blue;
-    margin: 60px 0 50px;
+    margin: 4rem 0 3.3rem;
 
     &::after {
         position: absolute;
