--- a/css/style.less
+++ b/css/style.less
@@ -18,7 +18,7 @@ body {
 
     &::after {
         content: "";
-        width: 1350px;
+        max-width: 1350px;
         height: 100%;
         background-color: @white;
         z-index: -1;
