--- a/css/blocks/container.less
+++ b/css/blocks/container.less
@@ -2,9 +2,9 @@
 
 .container {
     width: 100%;
-    max-width: 1310px;
+    max-width: 1250px;
     height: auto;
-    padding: 0 2rem;
+    // padding: 0 2rem;
     margin: 0 auto;
     text-align: center;
     position: relative;
