переделан блок партнёров

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -22,7 +22,7 @@
 }
 
 .about__item {
-    min-width: 620px;
+    min-width: 49.6%;
     position: relative;
 
     &:hover .about__content {
@@ -67,4 +67,10 @@
     padding: 0 1.5rem;
     font-size: 1.6rem;
     text-align: center;
+}
+
+@media (max-width: 1300px) {
+    .about__item {
+
+    }
 }
