--- a/css/style.less
+++ b/css/style.less
@@ -18,7 +18,7 @@ body {
 
     &::after {
         content: "";
-        max-width: 1350px;
+        max-width: 90rem;
         height: 100%;
         background-color: @white;
         z-index: -1;
@@ -40,6 +40,9 @@ h1, h2, h3, h4, h5, h6, p {
 *::after {
     box-sizing: border-box;
 }
+
+// Media
+
 
 // Blocks
 @import "blocks/container.less";
