поправлена анимация навигации

--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -6,6 +6,7 @@
 }
 
 .nav__link {
+    position: relative;
     margin-left: 2rem;
     text-transform: uppercase;
     color: @white;
@@ -15,6 +16,6 @@
     transition: .1s linear;
 
     &:hover {
-        opacity: .8;
+        opacity: .6;
     }
 }
