адаптация под большие и стандартные планшеты

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -69,8 +69,14 @@
     text-align: center;
 }
 
-@media (max-width: 1300px) {
-    .about__item {
+@media @tablet {
+    .about__text {
+        font-size: 1.2rem;
+    }
+}
 
+@media @tablet-m {
+    .about__text {
+        font-size: 1rem;
     }
 }
