--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -94,3 +94,15 @@
     height: 155px;
     border-right: 1px solid @light_blue;
 }
+
+@media @tablet {
+    .slider__item {
+        height: 200px;
+    }
+}
+
+@media @tablet-m {
+    .slider__item {
+        height: 250px;
+    }
+}
