--- a/css/vars.less
+++ b/css/vars.less
@@ -6,3 +6,8 @@
 @black: #000000;
 @light_black: #202020;
 @red: #9E365B;
+
+@tablet-l: ~"(max-width: 985px)";
+@tablet: ~"(max-width: 890px)";
+@tablet-m: ~"(max-width: 730px)";
+@tablet-s: ~"(max-width:600px)";
