--- a/css/blocks/header.less
+++ b/css/blocks/header.less
@@ -17,6 +17,29 @@
         opacity: 1;
         transition: opacity 1s ease .2s;
     }
+
+    &.fixed {
+        padding: .3rem 0;
+
+        background-color: @light_black;
+        box-shadow: 0 3px 10px fade(@light_black, 80);
+
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+
+        transform: translate3d(0, 0, 0);
+
+        .header__logo {
+            width: 147px;
+            height: 45px;
+        }
+    }
+
+    &.active {
+        background-color: @light_black;
+    }
 }
 
 .header__inner {
@@ -32,27 +55,4 @@
     background: url("../images/logo.png") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
-}
-
-.header.fixed {
-    padding: .3rem 0;
-
-    background-color: @light_black;
-    box-shadow: 0 3px 10px fade(@light_black, 80);
-
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-
-    transform: translate3d(0, 0, 0);
-
-    .header__logo {
-        width: 147px;
-        height: 45px;
-    }
-}
-
-.header.active {
-    background-color: @light_black;
 }
