--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -1,9 +1,6 @@
 // main: ../style.less
 
 .intro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -15,6 +12,11 @@
 }
 
 .intro__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    height: 100%;
     opacity: 0;
     transform: translateY(10%);
 
@@ -28,7 +30,7 @@
 .intro__text {
     position: relative;
     margin: 0 auto;
-    width: 650px;
+    width: 100%;
 
     font-size: 5rem;
     text-align: center;
@@ -38,7 +40,7 @@
     &::before,
     &::after {
         content: "";
-        width: 300px;
+        width: 250px;
         height: 5px;
         background-color: @white;
 
@@ -47,17 +49,50 @@
     }
 
     &::before {
-        bottom: -0.6rem;
+        top: -0.6rem;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 
     &::after {
-        top: -0.6rem;
-        left: 30%;
+        bottom: -0.6rem;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 }
 
 .intro__btn {
     position: absolute;
-    margin-top: 13.3rem;
     right: 0;
+    bottom: 3rem;
+}
+
+@media @tablet-m {
+    .intro__text {
+        font-size: 4rem;
+
+        &::before,
+        &::after {
+            width: 200px;
+        }
+    }
+}
+
+@media @tablet-s {
+    .intro__text {
+        font-size: 3rem;
+
+        &::before,
+        &::after {
+            width: 150px;
+        }
+    }
+
+    .intro__btn {
+        left: 0;
+        margin: 0 auto;
+        bottom: 1rem;
+    }
 }
