--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -19,3 +19,120 @@
         opacity: .6;
     }
 }
+
+.nav-toggle {
+    width: 30px;
+    padding: 10px 0;
+    display: none;
+
+    font-size: 0;
+    color: transparent;
+
+    border: 0;
+    background: none;
+    cursor: pointer;
+
+    position: relative;
+    z-index: 1;
+}
+
+.nav-toggle:focus {
+    outline: 0;
+}
+
+.nav-toggle__item {
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+
+    transition: background .2s linear;
+}
+
+.nav-toggle.active .nav-toggle__item {
+    background: none;
+}
+
+.nav-toggle__item:before,
+.nav-toggle__item:after {
+    content: "";
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    transition: transform .2s linear;
+}
+
+.nav-toggle__item:before {
+    top: -8px;
+}
+
+.nav-toggle__item:after {
+    bottom: -8px;
+}
+
+.nav-toggle.active .nav-toggle__item:before {
+    transform-origin: left top;
+    transform: rotate(45deg) translate3d(0px, -2px, 0)
+}
+
+.nav-toggle.active .nav-toggle__item:after {
+    transform-origin: left bottom;
+    transform: rotate(-45deg) translate3d(0px, 3px, 0);
+}
+
+@media (max-width: 1080px) {
+    .nav__link {
+        font-size: 1.2rem;
+    }
+}
+
+@media @tablet-l {
+    .nav__link {
+        font-size: 1rem;
+    }
+}
+
+@media @tablet {
+    .nav {
+        display: none;
+        width: calc(100% + 30px);
+        height: auto;
+        text-align: right;
+
+        position: absolute;
+        top: 100%;
+        right: 0;
+
+        background-color: @light_black;
+
+        &.active {
+            display: block;
+            box-shadow: 0 3px 10px fade(@light_black, 80);
+        }
+    }
+
+    .nav__link {
+        display: block;
+        margin: 0;
+        padding: 8px 20px;
+        font-size: 1.4rem;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+}
