--- a/css/blocks/partners.less
+++ b/css/blocks/partners.less
@@ -20,6 +20,7 @@
 .partners__table {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .partners__img {
@@ -32,4 +33,10 @@
 
     margin-right: 1.1rem;
     margin-bottom: 0.6rem;
+}
+
+@media @tablet-l {
+    .partners__img {
+        max-width: 20%;
+    }
 }
