адаптация под мелкие планшеты

--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -80,3 +80,13 @@
         font-size: 1rem;
     }
 }
+
+@media @tablet-s {
+    .about__text {
+        font-size: .9rem;
+    }
+
+    .about__content {
+        font-size: 1rem;
+    }
+}
