--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -57,3 +57,13 @@
         font-size: 1rem;
     }
 }
+
+@media @tablet-s {
+    .news__subtitle {
+        font-size: 1rem;
+    }
+
+    .news__text {
+        font-size: .9rem;
+    }
+}
