--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -103,6 +103,7 @@
 
 @media @tablet-m {
     .slider__item {
-        height: 250px;
+        // height: 230px;
+        font-size: 1rem;
     }
 }
