--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -31,3 +31,18 @@
 .footer__subtitle {
     font-weight: bold;
 }
+
+@media @tablet-s {
+    .footer__title {
+        font-size: 1rem;
+    }
+
+    .footer__subtitle {
+        font-size: .8rem;
+    }
+
+    .footer__col a {
+        font-size: .8rem;
+        line-height: 0;
+    }
+}
