--- a/css/btns.less
+++ b/css/btns.less
@@ -57,3 +57,17 @@
         }
     }
 }
+
+@media @tablet-s {
+    .btn--intro {
+        min-width: 300px;
+        font-size: 1.2rem;
+        padding: .4rem .15rem;
+    }
+
+    .btn--partn {
+        font-size: .9rem;
+        padding: .7rem .3rem;
+        min-width: 170px;
+    }
+}
