--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -103,7 +103,20 @@
 
 @media @tablet-m {
     .slider__item {
-        // height: 230px;
         font-size: 1rem;
+    }
+}
+
+@media @tablet-s {
+    .slider {
+        width: 95%;
+        justify-self: center;
+        align-self: center;
+        margin: 0;
+    }
+
+    .slider__item {
+        font-size: 1.5rem;
+        height: 250px;
     }
 }
