--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -59,11 +59,27 @@
 }
 
 @media @tablet-s {
-    .news__subtitle {
-        font-size: 1rem;
+    .news__text {
+        font-size: 1.5rem;
     }
 
-    .news__text {
-        font-size: .9rem;
+    .news__content {
+        flex-direction: column;
+        justify-content: start;
+    }
+
+    .news__item {
+        width: 100%;
+        margin-bottom: 3rem;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+
+    .news__photo {
+        width: 100%;
+        height: 300px;
+        align-self: center;
     }
 }
