--- a/css/title.less
+++ b/css/title.less
@@ -20,3 +20,10 @@
         bottom: -10px;
     }
 }
+
+@media @tablet-s {
+    .title {
+        font-size: 2rem;
+        margin: 3.5rem 0;
+    }
+}
