--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -11,7 +11,7 @@
 }
 
 .footer__col {
-    width: 45%;
+    width: 49%;
     height: auto;
 
     text-align: left;
@@ -44,5 +44,27 @@
     .footer__col a {
         font-size: .8rem;
         line-height: 0;
+    }
+}
+
+@media @mobile {
+    .footer__col {
+        line-height: 1.7rem;
+    }
+    .footer__title {
+        font-size: .7rem;
+    }
+
+    .footer__subtitle,
+    .footer__col a {
+        font-size: .6rem;
+    }
+
+    .footer__post {
+        font-size: 1rem;
+    }
+
+    .footer__name {
+        font-size: .8rem;
     }
 }
