--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -96,3 +96,14 @@
         bottom: 3rem;
     }
 }
+
+@media @mobile {
+    .intro__text {
+        font-size: 2rem;
+
+        &::before,
+        &::after {
+            width: 100px;
+        }
+    }
+}
