--- a/css/btns.less
+++ b/css/btns.less
@@ -71,3 +71,14 @@
         min-width: 170px;
     }
 }
+
+@media @mobile {
+    .btn--intro {
+        min-width: auto;
+        width: 100%;
+    }
+    
+    .btn--partn {
+        align-self: stretch;
+    }
+}
