--- a/css/vars.less
+++ b/css/vars.less
@@ -10,4 +10,5 @@
 @tablet-l: ~"(max-width: 985px)";
 @tablet: ~"(max-width: 890px)";
 @tablet-m: ~"(max-width: 730px)";
-@tablet-s: ~"(max-width:600px)";
+@tablet-s: ~"(max-width: 600px)";
+@mobile: ~"(max-width: 420px)";
