--- a/css/blocks/overflow.less
+++ b/css/blocks/overflow.less
@@ -14,8 +14,10 @@
     top: 0;
     right: 0;
     left: 0;
+    bottom: 0;
+    margin: auto;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: fade(@light_black, 20);-webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     flex-direction: column;
@@ -36,13 +38,41 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    right: -4rem;
-    top: 0;
+    right: 2rem;
+    top: 2rem;
     cursor: pointer;
     opacity: .7;
     transition: .1s linear;
 
     &:hover {
         background-color: fade(@black, 80);
+    }
+}
+
+@media (max-width: 1445px) {
+    .overflow__frame {
+        width: 854px;
+        height: 480px;
+    }
+}
+
+@media @tablet {
+    .overflow__frame {
+        width: 640px;
+        height: 360px;
+    }
+}
+
+@media @tablet-m {
+    .overflow__frame {
+        width: 427px;
+        height: 240px;
+    }
+}
+
+@media @tablet-s {
+    .overflow__frame {
+        width: auto;
+        height: auto;
     }
 }
