--- a/css/title.less
+++ b/css/title.less
@@ -27,3 +27,13 @@
         margin: 3.5rem 0;
     }
 }
+
+@media @mobile {
+    .title {
+        font-size: 1.5rem;
+
+        &::after {
+            width: 200px;
+        }
+    }
+}
