--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -21,15 +21,6 @@
     display: flex;
 }
 
-.about__item {
-    min-width: 49.6%;
-    position: relative;
-
-    &:hover .about__content {
-        opacity: 1;
-    }
-}
-
 .about__content {
     display: flex;
     flex-direction: column;
@@ -52,6 +43,16 @@
     transition: opacity .2s linear;
 }
 
+.about__item {
+    min-width: 49.6%;
+    position: relative;
+
+    &:hover .about__content,
+    &:focus .about__content {
+        opacity: 1;
+    }
+}
+
 .about__title {
     font-weight: 700;
 }
@@ -59,7 +60,6 @@
 .about__img {
     width: 100%;
     height: 100%;
-    // z-index: 1;
 }
 
 .about__text {
