--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -27,39 +27,45 @@
     }
 }
 
+.intro__title {
+    font-size: 5rem;
+    font-weight: 400;
+}
+
+.intro__subtitle {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.3rem;
+}
+
 .intro__text {
+    color: @white;
     position: relative;
     margin: 0 auto;
     width: 100%;
-
-    font-size: 5rem;
-    text-align: center;
     text-transform: uppercase;
-    color: @white;
+    text-align: center;
 
     &::before,
     &::after {
         content: "";
         width: 250px;
-        height: 5px;
+        height: 3px;
         background-color: @white;
+        margin: auto;
+        left: 0;
+        right: 0;
 
         position: absolute;
         z-index: 1;
     }
 
-    &::before {
-        top: -0.6rem;
-        left: 0;
-        right: 0;
-        margin: auto;
+    &::after {
+        bottom: -1.45rem;
     }
 
-    &::after {
-        bottom: -0.6rem;
-        left: 0;
-        right: 0;
-        margin: auto;
+    &::before {
+        top: -0.6rem;
     }
 }
 
@@ -70,24 +76,36 @@
 }
 
 @media @tablet-m {
-    .intro__text {
+    .intro__title {
         font-size: 4rem;
+    }
 
-        &::before,
-        &::after {
-            width: 200px;
-        }
+    .intro__text::before,
+    .intro__text::after {
+        width: 200px;
+    }
+
+    .intro__subtitle {
+        font-size: .8rem;
     }
 }
 
 @media @tablet-s {
-    .intro__text {
+    .intro__title {
         font-size: 3rem;
+    }
 
-        &::before,
-        &::after {
-            width: 150px;
-        }
+    .intro__text::before,
+    .intro__text::after {
+        width: 150px;
+    }
+
+    .intro__text::after {
+        bottom: -1rem;
+    }
+
+    .intro__subtitle {
+        font-size: .65rem;
     }
 
     .intro__btn {
@@ -98,12 +116,16 @@
 }
 
 @media @mobile {
-    .intro__text {
+    .intro__title {
         font-size: 2rem;
+    }
 
-        &::before,
-        &::after {
-            width: 100px;
-        }
+    .intro__text::before,
+    .intro__text::after {
+        width: 100px;
+    }
+
+    .intro__text::after {
+        bottom: -0.6rem;
     }
 }
