--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -72,10 +72,12 @@
 
     &::before {
         top: -8px;
+        transform-origin: 0% 0%;
     }
 
     &::after {
         bottom: -8px;
+        transform-origin: 0% 100%;
     }
 }
 
@@ -94,6 +96,10 @@
     position: relative;
     z-index: 1;
 
+    transform-origin: 4px 0px;
+  
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
     &:focus {
         outline: 0;
     }
@@ -104,13 +110,11 @@
         }
 
         .nav-toggle__item::before {
-            transform-origin: left top;
-            transform: rotate(45deg) translate3d(0px, -2px, 0)
+            transform: rotate(45deg) translate(0, -3px);
         }
 
         .nav-toggle__item::after {
-            transform-origin: left bottom;
-            transform: rotate(-45deg) translate3d(0px, 3px, 0);
+            transform: rotate(-45deg) translate(0, 3px);
         }
     }
 }
