--- a/css/blocks/overflow.less
+++ b/css/blocks/overflow.less
@@ -18,7 +18,8 @@
     margin: auto;
     width: 100%;
     height: 100vh;
-    background-color: fade(@light_black, 20);-webkit-backdrop-filter: blur(1rem);
+    background-color: fade(@light_black, 80);
+    -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     flex-direction: column;
     align-items: center;
