--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -73,7 +73,8 @@
     button{
         transform: translateX(-20px);
         font-size: 0;
-        width: 10px;
+        width: 15px;
+        // height: 15px;
         height: 15px;
         background-color: @red;
         border-radius: 50%;
