правка багов и недочётов

--- a/css/blocks/intro.less
+++ b/css/blocks/intro.less
@@ -61,7 +61,7 @@
     }
 
     &::after {
-        bottom: -1.45rem;
+        bottom: -1.5rem;
     }
 
     &::before {
@@ -85,6 +85,10 @@
         width: 200px;
     }
 
+    .intro__text::after {
+        bottom: -1.3rem;
+    }
+
     .intro__subtitle {
         font-size: .8rem;
     }
@@ -92,7 +96,7 @@
 
 @media @tablet-s {
     .intro__title {
-        font-size: 3rem;
+        font-size: 2.8rem;
     }
 
     .intro__text::before,
@@ -126,6 +130,6 @@
     }
 
     .intro__text::after {
-        bottom: -0.6rem;
+        bottom: -0.8rem;
     }
 }
