--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -65,7 +65,7 @@
         margin: 0px .6rem;
 
         &.slick-active button{
-            background-color: transparent;
+            background-color: @white;
             border: 1px solid @red;
         }
     }
@@ -74,10 +74,10 @@
         transform: translateX(-20px);
         font-size: 0;
         width: 15px;
-        // height: 15px;
         height: 15px;
         background-color: @red;
         border-radius: 50%;
+        border-color: transparent;
     }
 }
 
