--- a/css/blocks/about.less
+++ b/css/blocks/about.less
@@ -25,9 +25,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     width: 100%;
     height: 100%;
     padding: 0 1rem;
+    border-radius: 1rem;
 
     background-color: fade(@blue, 80);
     color: @light_blue;
@@ -60,6 +62,7 @@
 .about__img {
     width: 100%;
     height: 100%;
+    border-radius: 1rem;
 }
 
 .about__text {
@@ -78,6 +81,10 @@
 @media @tablet-m {
     .about__text {
         font-size: 1rem;
+    }
+
+    .about__content {
+        height: 99%;
     }
 }
 
@@ -104,5 +111,6 @@
 @media @mobile {
     .about__content {
         font-size: .9rem;
+        height: 98%;
     }
 }
