--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -43,6 +43,7 @@
     display: block;
     width: 100%;
     height: 3px;
+    border-radius: 3px;
 
     background-color: #fff;
 
@@ -60,6 +61,7 @@
         content: "";
         width: 100%;
         height: 3px;
+        border-radius: 3px;
 
         background-color: #fff;
 
