--- a/css/blocks/slider.less
+++ b/css/blocks/slider.less
@@ -59,6 +59,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+    padding: 0;
 
     li{
         list-style: none;
@@ -71,7 +72,6 @@
     }
 
     button{
-        transform: translateX(-20px);
         font-size: 0;
         width: 15px;
         height: 15px;
