--- a/css/btns.less
+++ b/css/btns.less
@@ -82,3 +82,9 @@
         align-self: stretch;
     }
 }
+
+@media (max-width: 985px) and (orientation: landscape){
+    .btn--intro {
+        display: none;
+    }
+}
