Config для хостинга, шаблон для нового блока

--- a/css/blocks/overflow.less
+++ b/css/blocks/overflow.less
@@ -50,7 +50,7 @@
     }
 }
 
-@media (max-width: 1445px) {
+@media @netbook {
     .overflow__frame {
         width: 854px;
         height: 480px;
