--- a/css/vars.less
+++ b/css/vars.less
@@ -7,6 +7,7 @@
 @light_black: #202020;
 @red: #9E365B;
 
+@netbook: ~"(max-width: 1445px)";
 @tablet-l: ~"(max-width: 985px)";
 @tablet: ~"(max-width: 890px)";
 @tablet-m: ~"(max-width: 730px)";
