--- a/css/blocks/nav.less
+++ b/css/blocks/nav.less
@@ -121,19 +121,13 @@
     }
 }
 
-@media (max-width: 1080px) {
+@media @netbook {
     .nav__link {
-        font-size: 1.2rem;
+        font-size: .95rem;
     }
 }
 
 @media @tablet-l {
-    .nav__link {
-        font-size: 1rem;
-    }
-}
-
-@media @tablet {
     .nav {
         display: none;
         height: 100vh;
