--- a/css/style.less
+++ b/css/style.less
@@ -49,6 +49,7 @@ h1, h2, h3, h4, h5, h6, p {
 @import "blocks/overflow.less";
 @import "blocks/about.less";
 @import "blocks/slider.less";
+@import "blocks/rating.less";
 @import "blocks/news.less";
 @import "blocks/partners.less";
 @import "blocks/footer.less";
