--- a/css/blocks/rating.less
+++ b/css/blocks/rating.less
@@ -10,3 +10,41 @@
         transform: translateY(0%);
     }
 }
+
+.rating__inner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rating__step {
+    width: 25%;
+    text-align: center;
+    padding: 0 1rem;
+}
+
+.rating__img {
+    width: 50px;
+    height: 50px;
+    margin: 1rem 0;
+    color: @red;
+}
+
+.rating__title {
+    margin-bottom: 1rem;
+}
+
+.rating__link {
+    color: @red;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
+.rating__text {
+    font-size: 1.1rem;
+    font-weight: 300;
+    font-style: italic;
+}
