--- a/css/blocks/news.less
+++ b/css/blocks/news.less
@@ -26,7 +26,7 @@
 
 .news__photo {
     width: 100%;
-    height: auto;
+    min-height: auto;
     object-fit: cover;
     border-radius: 1.3rem;
 
@@ -79,7 +79,7 @@
 
     .news__photo {
         width: 100%;
-        height: 300px;
+        min-height: 300px;
         align-self: center;
     }
 }
