добавлены ссылки на паблики

--- a/css/blocks/footer.less
+++ b/css/blocks/footer.less
@@ -32,6 +32,34 @@
     font-weight: bold;
 }
 
+.footer__links {
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
+.footer__link {
+    height: auto;
+    margin: .6rem 1rem 0 0;
+}
+
+.footer__img {
+    width: 40px;
+    height: 40px;
+}
+
+#vk {
+    fill: #4477bb;
+}
+
+#instagram {
+    fill: #a7468b;
+}
+
+#telegram {
+    fill: #36acf2;
+}
+
 @media @tablet-s {
     .footer__title {
         font-size: 1rem;
@@ -66,5 +94,10 @@
 
     .footer__name {
         font-size: .8rem;
+    }
+
+    .footer__img {
+        width: 30px;
+        height: 30px;
     }
 }
